Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjNumberRetText.quorum
class Main
    action Main
        Yoda<Text, Text, number> yoda
        number y = yoda:useForce("green", "green")
        output "passed"
     end
end
