Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriNumberRetTextFail.quorum
class Main
    action Main
        Yoda<Text, Text, number> yoda
        boolean y = yoda("green", "green", true)
     end
end
